overlays/staging/frontend/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leap25-frontend
spec:
  replicas: 2
